# 2D-platformer

./: .gitignore  CMakeLists.txt
include/: Entity.h  GameObject.h  RenderWindow.h
src/: CMakeLists.txt  Entity.cpp  GameObject.cpp  RenderWindow.cpp  main.cpp
